--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ sourceSets {
         java {
             srcDirs = ['src/main/java']
         }
+        resources {
+            srcDirs = ['src/main/resources']
+        }
     }
 }
 
@@ -45,7 +48,24 @@ run {
             '--module-path', 'lib/javafx-sdk-21.0.1/lib',
             '--add-modules', 'javafx.controls,javafx.fxml',
             '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
-            '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
+            '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '-Dfile.encoding=UTF-8'
         ]
     }
+}
+
+compileJava {
+    options.encoding = 'UTF-8'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Javadoc) {
+    options.encoding = 'UTF-8'
 }
