--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@
 # 使用阿里云镜像下载 Gradle
 systemProp.gradle.wrapperUrl=https://mirrors.aliyun.com/gradle/gradle-7.6.1-bin.zip
 
+org.gradle.jvmargs=-Dfile.encoding=UTF-8
