--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
 
 repositories {
     mavenCentral()
+    // 添加其他可能包含该库的仓库
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 sourceSets {
@@ -18,16 +20,30 @@ sourceSets {
     }
 }
 
+tasks.withType(JavaExec){
+    jvmArgs = ['-Xmx512m', '-Dfile.encoding=UTF-8', '-Dsun.stdout.encoding=UTF-8','-Dsun.stderr.encoding=UTF-8']
+}
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
 dependencies {
+    // LangChain4j 依赖
+    implementation 'dev.langchain4j:langchain4j:1.0.0-beta3'
+    implementation 'dev.langchain4j:langchain4j-open-ai:1.0.0-beta3'
+
+    // Jackson 依赖（LangChain4j 可能需要）
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+
+    // Gson 依赖
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // JavaFX 依赖（手动添加本地 JAR 文件）
     implementation files('lib/javafx-sdk-21.0.1/lib/javafx.base.jar')
     implementation files('lib/javafx-sdk-21.0.1/lib/javafx.controls.jar')
     implementation files('lib/javafx-sdk-21.0.1/lib/javafx.graphics.jar')
     implementation files('lib/javafx-sdk-21.0.1/lib/javafx.fxml.jar')
-    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 application {
@@ -35,9 +51,9 @@ application {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-    modularity.inferModulePath = true
+    sourceCompatibility = JavaVersion.VERSION_23
+    targetCompatibility = JavaVersion.VERSION_23
+    // 移除 modularity.inferModulePath，因为不再使用模块系统
 }
 
 test {
@@ -47,22 +63,19 @@ test {
 run {
     doFirst {
         jvmArgs = [
-            '--module-path', 'lib/javafx-sdk-21.0.1/lib',
-            '--add-modules', 'javafx.controls,javafx.fxml,java.logging',
-            '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
-            '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
-            '-Dfile.encoding=UTF-8'
+                '--module-path', 'lib/javafx-sdk-21.0.1/lib',
+                '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics,java.logging',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+                '-Dfile.encoding=UTF-8'
         ]
     }
 }
 
 compileJava {
     options.encoding = 'UTF-8'
-    options.compilerArgs += [
-        '--add-modules', 'com.google.gson,java.logging',
-        '--add-exports', 'com.google.gson/com.google.gson=slideshow',
-        '--add-exports', 'java.logging/java.util.logging=slideshow'
-    ]
+    // 移除模块化相关的 compilerArgs，因为不再使用模块系统
+    // options.compilerArgs += [...]
 }
 
 compileTestJava {
