--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ test {
 run {
     doFirst {
         jvmArgs = [
-                '--module-path', 'lib/javafx-sdk-21.0.1/lib',
+                '--module-path', 'lib/javafx-sdk-21.0.1/javafx-sdk-21.0.1/lib',
                 '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics,java.logging',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
