--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ task createStartScripts(type: CreateStartScripts) {
     applicationName = 'MDZ_Slider'
     mainClass = 'slideshow.Main'
     defaultJvmOpts = [
-        '--module-path', 'lib/javafx-sdk-21.0.1/lib',
+        '--module-path','lib/javafx-sdk-21.0.1//javafx-sdk-21.0.1/lib',
         '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics',
         '-Dfile.encoding=UTF-8',
         '-Duser.language=zh',
@@ -87,7 +87,7 @@ test {
 run {
     doFirst {
         jvmArgs = [
-                '--module-path', 'lib/javafx-sdk-21.0.1/lib',
+                '--module-path', 'lib/javafx-sdk-21.0.1//javafx-sdk-21.0.1/lib',
                 '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics,java.logging',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
