- 项目正式更名为 SlideMind，全面替换原有 MDZ_Slider 标识 - 完善 README 及多语言文档，突出 AI 智能、结构分析、多语言、模板管理等核心特性 - 优化主界面、窗口标题、构建脚本、打包配置等细节，提升用户体验 - 统一 jar 包命名、脚本提示、文档描述，便于分发和部署 - 代码结构与文档内容同步，便于后续维护和扩展
 本次实训开发到此暂告一段落，由于开发周期短以及开发者自身的水平有限，项目中的不完善之处还请多多包容，部分缺陷将在后续再进行更新  ！

Special thanks to all contributors for their outstanding efforts and collaboration:
- Aexplorer1
- komazein
- KuKA
- NEUFFFYK
- dog-du

感谢每一位贡献者的智慧与付出，让 SlideMind 成为一款更智能、更易用、更国际化的幻灯片工具

--- a/build.gradle
+++ b/build.gradle
@@ -56,14 +56,14 @@ task fatJar(type: Jar) {
     }
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
-    archiveBaseName = 'MDZ_Slider'
+    archiveBaseName = 'SlideMind'
     archiveVersion = '1.0'
 }
 
 // 添加 JavaFX 启动脚本任务
 task createStartScripts(type: CreateStartScripts) {
     outputDir = file('build/scripts')
-    applicationName = 'MDZ_Slider'
+    applicationName = 'SlideMind'
     mainClass = 'slideshow.Main'
     defaultJvmOpts = [
         '--module-path','lib/javafx-sdk-21.0.1//javafx-sdk-21.0.1/lib',
@@ -87,7 +87,7 @@ test {
 run {
     doFirst {
         jvmArgs = [
-                '--module-path', 'lib/javafx-sdk-21.0.1//javafx-sdk-21.0.1/lib',
+                '--module-path', 'lib/javafx-sdk-21.0.1/javafx-sdk-21.0.1/lib',
                 '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics,java.logging',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
